# poligon

./: CMakeLists.txt  main.cpp  shirley.txt
